k3s/manifests/network-policies/namespaces/monitoring/homarr/homarr-network.yaml
# Homarr Egress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-homarr-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: homarr
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.X.X/24

---

# Homarr Ingress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-homarr-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: homarr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.X.X/24
      ports:
        - protocol: TCP
          port: 7575
